# cinema-theater

./: DEADJOE  README.txt  data insertions  main.py
website/: __init__.py  auth.py  database.db  models.py  views.py
website/static/: index.js
website/static/img/: dune
website/static/stylesheets/: style.css
website/stylesheets/: style.css
website/template/: add_movie_view.html  base copy.html  base.html  customer_view.html  home.html  list_all_reservations.html  login.html  main_view.html  movie_view.html  register_manager.html  reservation_view.html  sign_up.html  upcomming_projection.html
website/template/additional templates/: customer_view.html  main_view.html  movie_view.html  reservation_view.html  skeleton.html
website/template/stylesheets/: style.css
